...
                android:layout_width="@dimen/aboutIcon_size" android:layout_height="@dimen/aboutIcon_size" android:layout_margin="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_96dp_suntimes"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_about_name"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:gravity="center" android:textSize="?attr/text_size_huge"
                android:textColor="?attr/date_buttonSelector" android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge" />



...
        <TextView
            android:id="@+id/txt_about_desc"
            android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp" android:layout_marginBottom="2dp"
            android:gravity="start" android:textSize="?attr/text_size_small"
            android:text="@string/app_shortdesc" />

        <TextView
            android:id="@+id/txt_about_version"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="4dp"
...
