<?xml version="1.0" encoding="utf-8"?>
<com.forrestguice.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:gravity="center"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="48dp">

    <LinearLayout
        android:layout_width="0dp" android:layout_height="0dp"
        android:gravity="center" android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/content_layout"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <com.forrestguice.support.widget.ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/welcomeIcon_size" android:layout_height="@dimen/welcomeIcon_size" android:layout_margin="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_200dp_alarm" android:tint="?attr/colorControlHighlight"
            tools:ignore="ContentDescription" />

        <TextView android:visibility="visible"
            android:id="@+id/txt_title"
            android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:text="@string/alarms_label_alarmClock"
            android:gravity="center" android:textSize="?attr/text_size_xlarge"
            android:textColor="?attr/date_buttonSelector" android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <include layout="@layout/layout_welcome_alarms_content"
        android:id="@+id/content_layout" />

</com.forrestguice.support.constraint.ConstraintLayout>